jkanban from local, not cdn

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>EOSP Course Curriculum</h1>
     <div id="kanban"></div>
 
-    <script src="https://cdn.jsdelivr.net/gh/riktar/jkanban/blob/master/dist/jkanban.min.css"></script>
-    <script src="https://cdn.jsdelivr.net/gh/riktar/jkanban/blob/master/dist/jkanban.min.js"></script>
+    <script src="/eosp-course/css/jkanban.min.css"></script>
+    <script src="/eosp-course/js/jkanban.min.js"></script>
     <script src="/eosp-course/js/parse-obsidian-kanban.js"></script>
   </body>
 </html>
