add dragual for drag and drop

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <title>Curriculum</title>
     <link rel="stylesheet" href="/eosp-course/css/colored-tags.css" />
+    <link rel="stylesheet" href="/eosp-course/css/jkanban.min.css" />
   </head>
   <body>
     <h1>EOSP Course Curriculum</h1>
     <div id="kanban"></div>
 
-    <script src="/eosp-course/css/jkanban.min.css"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.3/dragula.min.js"></script>
     <script src="/eosp-course/js/jkanban.min.js"></script>
     <script src="/eosp-course/js/parse-obsidian-kanban.js"></script>
   </body>
