--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Curriculum</title>
-    <link rel="stylesheet" href="/eosp-course/css/colored-tags.css" />
+    <link rel="stylesheet" href="/eosp-course/css/style.css" />
     <link rel="stylesheet" href="/eosp-course/css/jkanban.min.css" />
   </head>
   <body>
-    <h1>EOSP Course Curriculum</h1>
-    <div id="kanban"></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.3/dragula.min.js"></script>
     <script src="/eosp-course/js/jkanban.min.js"></script>
     <script src="/eosp-course/js/parse-obsidian-kanban.js"></script>
+
+    <div class="header-container">
+      <h1>EOSP Course Curriculum</h1>
+      <a href="https://github.com/alchemmist/eosp-course">alchemmist/eosp-course</a>
+    </div>
+    <div id="kanban"></div>
   </body>
 </html>
