--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Curriculum</title>
-    <link rel="stylesheet" href="/eosp-course/css/style.css" />
-    <link rel="stylesheet" href="/eosp-course/css/jkanban.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/jkanban.min.css" />
     <link rel="icon" href="favicon.ico" />
   </head>
   <body>
-    <script src="/eosp-course/js/jkanban.min.js"></script>
-    <script src="/eosp-course/js/parse-obsidian-kanban.js"></script>
+    <script src="js/jkanban.min.js"></script>
+    <script src="js/parse-obsidian-kanban.js"></script>
 
     <div class="header-container">
       <h1>EOSP Course Curriculum</h1>
